--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    before
-    <br>
+    <!-- before -->
+    <%- include("../partials/header.ejs") %>
+    <%- include('../partials/error_message.ejs') %>
     <%- body %>
     <br>
-    after
 </body>
 </html>
