--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,17 +1,17 @@
 <h2>Search Authors</h2>
 <form action="/authors" method="GET">
-    <%- include('../partials/form_fields.ejs') %>
+    <label>Name</label>
+    <input type="text" name="name" value="<%=name%>">
     <button type="submit">Search</button>
 </form>
 <br>
 <% authors.forEach(author => { %>
     <div> <%=author.name %> 
-        <form action ='/authors' method = "POST">
-            <button type="submit">View</button>
-            <button type="submit">Edit</button>
+            <a href="/authors/<%=author.id%>"><button >View</button></a>
+            <a href="/authors/<%=author.id%>/edit"><button >Edit</button></a>
+            <form method="POST" action="/authors/<%=author.id%>?_method=DELETE">
             <button type="submit">Delete</button>
-
-        </form>
+            </form>
     </div>
 
 <% }) %>
