--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,7 +1,8 @@
 <h2>New Author</h2>
 
 <form action ="/authors" method="POST">
-    <%- include('../partials/form_fields.ejs') %>
+    <label>Name</label>
+    <input type="text" name="name" value = <%= author.name%>>
     <a href="/">Cancel</a>
     <button type="submit">Create</button>
 </form>
