--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,12 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="/css/filepond.css" rel="stylesheet" />
+    <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet"/>
+   
+
 </head>
 <body>
     <!-- before -->
     <%- include("../partials/header.ejs") %>
     <%- include('../partials/error_message.ejs') %>
     <%- body %>
+    <script  src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
+    <script  src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
+    <script  src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
+
+<script  src="/javascripts/filepond.js"></script>
+<script>
+    FilePond.registerPlugin(
+    FilePondPluginImagePreview,
+    FilePondPluginImageFileEncode,
+    FilePondPluginImageResize
+)
+FilePond.setOptions({
+    stylePanelAspectRatio: 1.5
+})
+
+FilePond.parse(document.body);
+</script>
     <br>
 </body>
 </html>
